updated index, footer
footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS</p>
+    <p>IT JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS IT'S JUST FAKE NEWS</p>
   </footer>
 </body>
 </html>
