--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Centered Navigation Menu -->
   <nav class="centered-menu">
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="culture.html">Culture</a></li>
       <li><a href="tech.html">Tech</a></li>
       <li><a href="videos.html">Videos</a></li>
